posting-client/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reise-buchung
spec:
  selector:
    app: reise-buchung
  ports:
  - port: 80
    targetPort: 8080
