posting-client/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reise-buchung
spec:
  rules:
    - host: reise-buchung.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reise-buchung
                port:
                  number: 80
